--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,8 @@ ipdb = "^0.13.13"
 [tool.poetry.scripts]
 minerva-cargo = "cargo.standalone:app"
 
+[tool.black]
+line-length = 120
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
